fix(core): spacing tweaks and docs updates

--- a/lbh/components/lbh-collapsible/_collapsible.scss
+++ b/lbh/components/lbh-collapsible/_collapsible.scss
@@ -45,5 +45,10 @@
       font-weight: 600;
       margin-bottom: 0;
     }
+
+    &__content {
+      margin-top: 15px;
+      margin-bottom: 35px;
+    }
   }
 }
